--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://niralnaik.github.io/react-razorpay/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#00002e",
   "background_color": "#ffffff"
 }
