--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://niralnaik.github.io/react-razorpay/",
+  "start_url": "",
   "display": "standalone",
   "theme_color": "#00002e",
   "background_color": "#ffffff"
